# task_geodata

./: README.md  pyproject.toml  requirements.txt
geodata/cadastralmap/: apps.py  forms.py  services.py  urls.py  views.py
geodata/cadastralmap/templates/cadastralmap/: base.html  mainpage.html  map.html  resultmap.html
geodata/geodata/: settings.py  urls.py
